Fix layout issues

--- a/0x03-responsive_design/02-1-styles.css
+++ b/0x03-responsive_design/02-1-styles.css
@@ -1,5 +1,5 @@
-/* Variables
-  ============================= */
+
+/* Variable  ============================= */
 
   :root {
     --color-primary: #D73953;
@@ -32,7 +32,7 @@
     --line-height-big: 1.8;
   
     /** SECTION **/
-    --section-padding: 5rem 0;
+    --section-padding: 5rem 1.5rem;
     --section-header-padding: 0 0 3rem;
     --section-header-align: center;
     --section-title-font-size: var(--font-size-xx-large);
@@ -45,7 +45,7 @@
     --section-tagline-font-family: var(--font-family-headings);
     --section-tagline-font-weight: var(--font-weight-bold);
     --section-tagline-margin: 0;
-    --section-body-padding: 2rem 0 4rem;
+    --section-body-padding: 2rem 0 0;
     --section-footer-padding: 3rem 0 0;
     --section-footer-align: center;
   
@@ -62,9 +62,13 @@
     --nav-item-letter-spacing: .04rem;
     --nav-item-display: inline-block;
     --nav-item-margin: 0 0 0 2rem;
-    --nav-item-link-hover: var(--color-white);
-  
-    /** BUTTON **/
+    --nav-item-link-hover: var(--color-white)
+    @media (max-width: 767px) {
+    .navbar-menu {
+      display: none;
+    }
+  }
+  /** BUTTON **/
     --button-display: inline-block;
     --button-padding: 1.5rem 3rem;
     --button-border: var(--color-primary) solid 0.2rem;
@@ -155,8 +159,8 @@
   
   .visually-hidden:not(:focus):not(:active) {
     position: absolute !important;
-    height: 1px;
-    width: 1px;
+    height: auto;
+    width: 100%;
     overflow: hidden;
     clip: rect(1px, 1px, 1px, 1px);
     white-space: nowrap;
@@ -175,28 +179,44 @@
   
   /* Grid
       ============================= */
-  
-  ul.row {
-    margin: -1rem;
-    padding: 0;
-    list-style: none;
-  }
-  
-  .row {
-    display: flex;
-  }
-  
-  [class*='col-'] {
-    margin: 1rem;
-  }
-  
-  .col-1-3 {
-    width: calc((100% / 3) - 2rem);
-  }
-  
-  .col-1-2 {
-    width: calc((100% / 2) - 2rem);
-  }
+      ul.row {
+        margin: -1rem;
+        padding: 0;
+        list-style: none;
+      }
+        
+      .row {
+        display: flex;
+      }
+        
+      [class*='col-'] {
+        margin: 1rem;
+      }
+      
+      /* Other grid styles here */
+      
+      @media (max-width: 767px) {
+        :root {
+          --section-padding: 5rem 1.5rem;
+          --section-body-padding: 2rem 0 0;
+        }
+      
+        ul.row,
+        .row {
+          flex-direction: column;
+          margin: 0;
+        }
+      
+        [class*='col-'] {
+          margin: 0 0 3rem 0;
+        }
+      
+        .col-1-3,
+        .col-1-2 {
+          width: 100%;
+        }
+      }
+      
   
   /* Navbar
       ============================= */
@@ -379,13 +399,14 @@
     min-height: 35vh;
   }
   /* Section Latest news
-      ============================= */
-  
-  .section-latest-news .row {
-    flex-direction: row-reverse;
-  }
-  
-  /* Section SERVICES
+  ============================= */
+  /* Mobile  and tablet styles */
+  @media (max-width: 767px) {
+    .section-latest-news .row {
+        flex-direction: column;
+    }
+}
+/* Section SERVICES
       ============================= */
   
   .section-services .row {
